# clawbot_gui

./: .gitignore  Cargo.toml  README.md  output.txt  setup.ps1  setup.sh
.claw-agents/: agent-1775138858812873600.json  agent-1775138858812873600.md  agent-1775138858978822300.json  agent-1775138858978822300.md  agent-1775138946727239700.json  agent-1775138946727239700.md  agent-1775138946886342900.json  agent-1775138946886342900.md  agent-1775139001902449700.json  agent-1775139001902449700.md  agent-1775139002063181300.json  agent-1775139002063181300.md  agent-1775139036978749700.json  agent-1775139036978749700.md  agent-1775139037139993800.json  agent-1775139037139993800.md  agent-1775139556196116300.json  agent-1775139556196116300.md  agent-1775139556356470100.json  agent-1775139556356470100.md  agent-1775140077574846200.json  agent-1775140077574846200.md  agent-1775140077740519400.json  agent-1775140077740519400.md  agent-1775140092082151300.json  agent-1775140092082151300.md  agent-1775140092239008800.json  agent-1775140092239008800.md
.claw/plugins/: installed.json
.claw/sessions/: session-1775053669511.json  session-1775053899500.json  session-1775054277123.json  session-1775056523132.json  session-1775089450772.json  session-1775089871762.json  session-1775090166613.json
crates/claw-cli/: Cargo.toml  GUI_DEVELOPMENT.md  build.rs
crates/claw-cli/.claw/plugins/: installed.json
crates/claw-cli/src/: args.rs  main.rs  tui.rs
crates/claw-cli/src/gui/: agent_tools.rs  app.rs  backend.rs  markdown.rs  mod.rs  ollama.rs  persist.rs  types.rs
(+22 files in other folders)
